Added overhaul for mending